2009-02-08 Maximilien Cuony
    * 0.7.3 packed, and uploaded to the server !
    * Small bugs fixed

2009-02-07 Maximilien Cuony
    * Manage encrypted attachements and subpart

2009-02-06 Maximilien Cuony
    * Allow importing private key with the keymananger
    * New mime decoder

2009-02-05 Maximilien Cuony
    * Gmail working again
    * FS#217
    * FS#229
    * Refresh keylist when importing a file
    * FS#230

2009-02-02 Maximilien Cuony
    * Fix problem with mails sended by claws mail, kmail, Mutt

2009-02-01 Maximilien Cuony
    * FS#225
    * FS#224
    * FS#219
    * FS#226
    * FS#221

2009-01-31 Maximilien Cuony
    * FS#228
    * Splitting mime functions
    * FS#222
    * Keyring -> inline (FireGPGInline)
    * Reorganisation of FireGPG structure in progress.
    * Fixed the about windows

2009-01-26 Maximilien Cuony
    * Fix a problem with form value, thanks to 	Mateusz Baszczyk for his help

2009-01-25 Maximilien Cuony
    * 0.7.2 packed, and uploaded to the server !
    * Version 0.7.2 fix a problem with mail send in plain text (< and > are converted)
    * 0.7.1 packed, and uploaded to the server !
    * Danish added

2009-01-24 Maximilien Cuony
    * FS#214
    * New comment
    * FS#213
    * Fix a problem with firegpg message after sending a mail
    * Fix a problem when opening link in new windows widhout sending a mail
    * FS#183
    * FS#200
    * FS#186
    * FS#210

2009-01-22 Maximilien Cuony
    * FS#208
    * FS#206
    * FS#207

2009-01-21 Maximilien Cuony
    * FS#201
    * FS#202
    * FS#198
    * FS#194
    * FS#193
    * FS#188
    * FS#197
    * FS#199
    * FS#22
    * FS#195

2009-01-19 Maximilien Cuony
    * 0.7 packed, and uploaded to the server !
    * Adding ja, cs, fa

2009-01-18 Maximilien Cuony
    * Openpgp/mime support is... done FS#80

2009-01-17 Maximilien Cuony
    * Autosave should be disabled again FS#108
    * Sending mail by smtp done !

2009-01-15 Maximilien Cuony
    * Inline sign/crypt done